[package]
name = "borrower"
version = "0.1.0"
edition = "2021"
authors = ["Sewen Thy <me@sewenthy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "4.0.20", features = [ "derive" ] }
syn = {version="1.0.86", features=["printing", "parsing", "full", "visit-mut", "visit"]}
proc-macro2 = { version = "1.0", features = ["span-locations"]}
quote = "1.0"
utils = { path = "../utils" }
