[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.6.0"
controller = { path = "../controller" }
borrower = { path = "../borrower" }
repairer = { path = "../repairer" }
utils = { path = "../utils" }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["blocking", "json", "serde_json"] }