[package]
name = "experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
regex = "1.6.0"
rem-controller = { path = "../rem-controller" }
rem-borrower = { path = "../rem-borrower" }
rem-repairer = { path = "../rem-repairer" }
rem-utils = { path = "../rem-utils" }
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11.14", features = ["blocking", "json", "serde_json"] }
jwt-simple = "0.11.4"
pyo3 = { version = "0.18.1", features = ["auto-initialize"]}
clap = "4.2.1"
