[package]
name = "rem-utils"
version = "0.1.1"
edition = "2021"
authors = ["VERSE Lab <https://verse-lab.github.io>"]
license = "MIT"
description = "Utilities for Rusty Extraction Maestro"
repository = "https://github.com/verse-lab/rustic-cat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="7.1.0"}
ena = {version="0.14"}
syn = {version="1.0.80", features=["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"]}
log = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"]}
string_cache = "0.8"
quote = "1.0"
home = "0.5.4"
