[package]
name = "repair-refactoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
radix_fmt = "1.0.0"
regex = "1.6.0"
rustfix = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0.103"