[package]
name = "repair-refactoring"
version = "0.1.0"
edition = "2021"
authors = ["Sewen Thy <me@sewenthy.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
clap = { version = "4.0.20", features = [ "derive" ] }
anyhow = "1.0.66"
radix_fmt = "1.0.0"
regex = "1.6.0"
rustfix = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "1.0.103"