[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = {version="7.1.0"}
ena = {version="0.14"}
syn = {version="1.0.80", features=["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"]}
log = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"]}
string_cache = "0.8"
quote = "1.0"
